amazon-secrets-manager-properties-provider/1.1/modules/ROOT/pages/index.adoc
= Amazon Secrets Manager Properties Provider 1.1 

Amazon Secrets Manager Properties Provider is a configuration that enables you to retrieve your secrets from Amazon Secrets Manager cloud service before your Mule app runs.

For information about compatibility and fixed issues, refer to the Amazon Secrets Manager Properties Provider Release Notes.

== Before You Begin

To use this properties provider, you must be familiar with:

* AWS Secrets Manager
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* How to create a Mule app using Anypoint Studio

Before creating an app, you must have:

* Mule Enterprise Edition
* Credentials to access the AWS Secrets
* Anypoint Platform
* Anypoint Studio or Anypoint Code Builder

== Common Use Cases for the Properties Provider

With AWS Secrets Manager Properties Provider, you can:

* Configure values from AWS Secrets Manager for Mule applications.
* Retrieve secrets for SaaS applications as part of the source or operation.
* Specify the name of the secret to retrieve.
* Authenticate to AWS using the available options from the AWS SDK IAM, default provider chain, or Basic Authentication.
* Specify the AWS server or region to connect to the appropriate server for your business unit.
* Be notified about errors while connecting to AWS.
* Be notified about errors while retrieving secrets from AWS.



== See Also

* xref:amazon-secrets-manager-examples.adoc[Amazon Secrets Manager Properties Provider Examples]
* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* xref:amazon-secrets-manager-properties-provider-reference.adoc[Amazon Secrets Manager Properties Provider Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
